testsuite/tests/ghc-regress/typecheck/should_compile/tc008.hs
module ShouldSucceed where

n True = 1
n False = 0
