testsuite/tests/ghc-regress/typecheck/should_fail/tcfail008.hs
module ShouldFail where

o = 1:2
